library/src/main/java/com/example/demo/error/DuplicatedEntry.java
package com.example.demo.error;

public class DuplicatedEntry extends RuntimeException {

	
}
